tests/negative/gold/incomplete_string_interpolation_format_test.gold
tests/negative/incomplete_string_interpolation_format_test.toit:6:7: error: Invalid format string
  "$(% 499)"
      ^
tests/negative/incomplete_string_interpolation_format_test.toit:7:7: error: Invalid format string
  "$(%x
      ^
tests/negative/incomplete_string_interpolation_format_test.toit:7:7: error: Incomplete expression
  "$(%x
      ^
tests/negative/incomplete_string_interpolation_format_test.toit:7:5: error: Missing closing ')'
  "$(%x
    ^~
tests/negative/incomplete_string_interpolation_format_test.toit:8:1: error: Unterminated string

^
Compilation failed.
